<resources>
    <string name="app_name">ScheduleApp</string>
    <string name="name_event">Дело:</string>
    <string name="time_event">С-До:</string>
    <string name="description_event">Описание</string>
    <string name="save_button">Сохранить</string>
    <string name="add_button">Добавить новое дело</string>
    <string name="hint_name">Напишите название дела</string>
    <string name="hint_description">Напишите описание дела</string>
    <string name="hint_time">Выберите время</string>


</resources>