<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".ActivityTwo">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_event"
        android:id="@+id/name"
        android:layout_marginTop="30sp"
        android:layout_gravity="top|left"
        android:fontFamily="monospace"
        android:textSize="16sp"
        style="@style/TextAppearance.AppCompat.Title"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_event"
        android:id="@+id/dateStart"
        android:layout_marginTop="120sp"
        android:layout_gravity="top|left"
        android:fontFamily="monospace"
        android:textSize="16sp"
        style="@style/TextAppearance.AppCompat.Title"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_event"
        android:id="@+id/description"
        android:layout_marginTop="300sp"
        android:layout_gravity="top|center"
        android:fontFamily="monospace"
        android:textSize="16sp"
        style="@style/TextAppearance.AppCompat.Title"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TxInLaName"
        android:layout_width="310sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_gravity="top|right"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        >

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:id="@+id/TxEditName"
            android:hint="@string/hint_name"
             />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDateStartEnd"
        android:layout_width="310sp"
        android:layout_marginTop="100sp"
        android:hint="@string/hint_time"
        app:endIconMode="dropdown_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        >
        <AutoCompleteTextView
            android:id="@+id/editableDateStartEnd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"



             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="330sp"
        android:id="@+id/TxInLaDescription"
        android:layout_marginTop="350sp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        app:counterEnabled="true"
        app:counterMaxLength="300"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TxEditDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="600sp"
        android:text="@string/save_button"
        android:textColor="@color/black"
        style="@style/Widget.AppCompat.Button.Borderless"/>



</FrameLayout>